<resources>
    <string name="app_name">Miwork</string>
    <string name="login">Login with phone number</string>
    <string name="enter_number">Enter number</string>
    <string name="as_admin">as admin</string>
    <string name="please_enter_number">Please enter valid number</string>
    <string name="verifying_number">Verifying phone number …</string>
    <string name="ok">OK</string>
    <string name="signing_in">Logging in …</string>
    <string name="verification_failed">Verification failed. Please try again.</string>
    <string name="verify">Verify</string>
    <string name="cancel">Cancel</string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="login_failed">Login failed.</string>
    <string name="resend">Resend Code</string>
    <string name="full_name">Full name</string>
    <string name="national_id">National ID</string>
    <string name="address">Address</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="done">Done</string>
    <string name="fields_info">* All fields are mandatory.</string>
    <string name="dashboard">Dashboard</string>
    <string name="sign_up">Sign Up</string>
    <string name="loading">Loading …</string>
    <string name="profile_updated">Profile updated …</string>
    <string name="profile_update_error">Profile update failed.</string>
    <string name="log_out">Logout</string>
    <string name="pin_code">PIN code</string>
    <string name="pin_description">A 4 digit PIN is required for login after every session timeout.</string>
    <string name="pin_code_verify">Verify PIN code</string>
    <string name="pins_not_match">PINs do not match.</string>
    <string name="enter_pin">Enter 4 digit PIN code</string>
    <string name="enter_new_pin">Enter new PIN</string>
    <string name="forgot_pin">Forgot PIN</string>
    <string name="enter_national_id">Enter your national ID</string>
    <string name="reset_pin">Reset pin</string>
    <string name="reset_pin_string">Reset PIN</string>
    <string name="couldnt_verify">Couldn\'t add new id.</string>
    <string name="wrong_national_id">Wrong national id.</string>
    <string name="pin_update_failed">Pin update failed</string>
    <string name="pin_verification_failed">Pin verification failed.</string>
    <string name="setting_new_pin">Setting new PIN …</string>
    <string name="pin_updated">PIN updated</string>
    <string name="profile">Profile</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="update">Update</string>
    <string name="unable_to_load_data">Unable to load data</string>
    <string name="error_updating_profile">Profile update failed</string>
    <string name="updating">Updating …</string>
    <string name="update_pin_code">Tap to update PIN code</string>
    <string name="logout">Logout</string>
    <string name="update_pin">Update PIN code</string>
    <string name="enter_old_pin">Enter old pin</string>
    <string name="wrong_old_pin">You have entered wrong old PIN.</string>
    <string name="unable_to_update_pin">UnableToUpdatePin</string>
    <string name="limit">Limit</string>
    <string name="zero">0</string>
    <string name="clients">Clients</string>
    <string name="national_id_label">National ID: %1$s</string>
    <string name="limits">Limits</string>
    <string name="limit_with_label">Limit: %1$s</string>
    <string name="add_new_limit">Add new limit</string>
    <string name="update_limit">Update loan limit</string>
    <string name="limit_updated">Limit updated.</string>
    <string name="limit_update_failed">Limit update failed.</string>
    <string name="apply_for_loan">Apply For Loan</string>
    <string name="application_loan">New Loan Application</string>
    <string name="loan_amount">Loan amount</string>
    <string name="employment_status">Employment status</string>
    <string name="monthly_income">Monthly income</string>
    <string name="company_institution">Company/Institution</string>
    <string name="accept_terms_condition">Accept terms and conditions</string>
    <string name="accept">Accept</string>
    <string name="terms_and_condition_half">" terms and conditions"</string>
    <string name="terms_and_condition">Terms &amp; Conditions</string>
    <string name="apply">Apply</string>
    <string name="accept_terms_condition_error">Please accept terms and conditions.</string>
    <string name="application_sent">Application sent</string>
    <string name="new_application_failed">Sending application failed. Please  try again.</string>
    <string name="client_loan_requests">Loan Requests</string>
    <string name="reject">Reject</string>
    <string name="appl_accepted">Application accepted.</string>
    <string name="appl_rejected">Application accepted.</string>
    <string name="status_failed">Status update failed.</string>
    <string name="rejected">Rejected</string>
    <string name="loan_history">Loan History</string>
    <string name="pending">Pending</string>
    <string name="interest_rate">Interest Rate</string>
    <string name="update_interest_rate">Update Interest Rate</string>
    <string name="new_interest_rate">New interest rate</string>
    <string name="loan_limit">Loan Limit</string>
    <string name="recent_loans">Recent Loans</string>
    <string name="no_recent_history_found">No recent history found. Click on Apply For Loan for applying to new loan.</string>
    <string name="loading_advertisement">Loading advertisement …</string>

    <array name="employee_status">
        <item>Employed</item>
        <item>Self Employed</item>
        <item>Unemployed</item>
        <item>Student</item>
    </array>

    <array name="income_options">
        <item>0-10000</item>
        <item>10001-50000</item>
        <item>50,000-100,000</item>
        <item>100,000 and above</item>
    </array>


</resources>
