<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.samuel.miwork.activities.ProfileUpdateActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <EditText
                android:id="@+id/full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_style"
                android:hint="@string/full_name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1" />

            <EditText
                android:id="@+id/national_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/input_style"
                android:hint="@string/national_id"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1" />

            <EditText
                android:id="@+id/date_of_birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/input_style"
                android:hint="@string/date_of_birth"
                android:imeOptions="actionNext"
                android:inputType="date"
                android:maxLines="1" />


            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/input_style"
                android:hint="@string/address"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1" />

            <EditText
                android:id="@+id/pin_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/input_style"
                android:hint="@string/pin_code"
                android:maxLength="4"
                android:imeOptions="actionNext"
                android:inputType="numberPassword"
                android:maxLines="1" />


            <EditText
                android:id="@+id/pin_code_verification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:maxLength="4"
                android:background="@drawable/input_style"
                android:hint="@string/pin_code_verify"
                android:imeOptions="actionDone"
                android:inputType="numberPassword"
                android:maxLines="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:id="@+id/pin_error"
                android:visibility="gone"
                android:text="@string/pins_not_match"
                android:textColor="@color/colorRed" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:padding="5dp"
                android:id="@+id/pin_code_info_label"
                android:background="@color/colorWhite"
                android:text="@string/pin_description" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:id="@+id/mandatory_field_label"
                android:text="@string/fields_info"
                android:textColor="@color/colorRed" />

            <Button
                android:id="@+id/done"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_style"
                android:text="@string/done"
                android:textColor="@color/colorWhite" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
