<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/update_pin"
        android:textColor="@color/colorBlack"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="8">

        <EditText
            android:id="@+id/old_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_style"
            android:hint="@string/enter_old_pin"
            android:imeOptions="actionNext"
            android:inputType="numberPassword"
            android:maxLength="4"
            android:maxLines="1" />

        <EditText
            android:id="@+id/new_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/input_style"
            android:hint="@string/enter_new_pin"
            android:imeOptions="actionDone"
            android:inputType="numberPassword"
            android:maxLength="4"
            android:maxLines="1" />

        <TextView
            android:layout_marginTop="15dp"
            android:background="@color/colorWhite"
            android:textColor="@color/colorRed"
            android:padding="5dp"
            android:id="@+id/wrong_pin"
            android:visibility="gone"
            android:text="@string/wrong_old_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        tools:ignore="ButtonStyle">


        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/cancel"
            android:textColor="@color/colorWhite" />


        <Button
            android:id="@+id/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/update"
            android:textColor="@color/colorWhite" />

    </LinearLayout>


</LinearLayout>