<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="15dp"
    tools:context="com.samuel.miwork.activities.ProfileUpdateActivity">

    <LinearLayout
        android:id="@+id/layout_wrapper"
        android:layout_width="match_parent"
        android:visibility="visible"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_style"
            android:hint="@string/full_name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:id="@+id/national_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/input_style"
            android:hint="@string/national_id"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:id="@+id/date_of_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/input_style"
            android:hint="@string/date_of_birth"
            android:imeOptions="actionNext"
            android:inputType="date"
            android:maxLines="1" />


        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/input_style"
            android:hint="@string/address"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:id="@+id/pin_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/input_style"
            android:hint="@string/update_pin_code"
            android:imeOptions="actionDone"
            android:inputType="numberPassword"
            android:maxLength="4"
            android:maxLines="1" />

        <TextView
            android:id="@+id/pin_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/pins_not_match"
            android:textColor="@color/colorRed"
            android:visibility="gone" />


        <Button
            android:id="@+id/update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_style"
            android:text="@string/update"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <TextView
        android:id="@+id/error_view"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_height="wrap_content" />
</FrameLayout>
