<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_interest_rate"
        android:textColor="@color/colorBlack"
        android:textSize="18sp" />

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/percent_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/new_interest_rate"
        android:background="@drawable/input_style"
        android:imeOptions="actionDone"
        android:inputType="number" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        tools:ignore="ButtonStyle">


        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/cancel"
            android:textColor="@color/colorWhite" />


        <Button
            android:id="@+id/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/update"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

</LinearLayout>