<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/loan_amount" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:id="@+id/interest_rate"
                android:text="@string/interest_rate"
                android:textColor="@color/colorRed" />

        </LinearLayout>

        <EditText
            android:id="@+id/loan_amount_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="9dp"
            android:background="@drawable/input_style"
            android:inputType="number" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/total_amount"
                android:text="" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:id="@+id/max_limit"
                android:text="max" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/employment_status" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/emp_status_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/input_style" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/monthly_income" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/income_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/input_style" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/company_institution" />

        <EditText
            android:id="@+id/comp_inst_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/input_style"
            android:imeOptions="actionDone"
            android:inputType="text" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/terms_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginLeft="-7dp"
                android:layout_marginStart="-7dp"
                android:text="@string/accept"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/terms_and_condition_link"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_toEndOf="@id/terms_checkbox"
                android:layout_toRightOf="@id/terms_checkbox"
                android:gravity="center_vertical"
                android:text="@string/terms_and_condition_half"
                android:textColor="@color/bg_main"
                android:textSize="14sp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/terms_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/accept_terms_condition_error"
            android:textColor="@color/colorRed"
            android:visibility="gone" />

        <Button
            android:id="@+id/apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button_style"
            android:text="@string/apply"
            android:textColor="@color/colorWhite" />
    </LinearLayout>


</ScrollView>