<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textColor="@color/colorBlack"
        android:text="@string/reset_pin_string"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="8">

        <EditText
            android:id="@+id/national_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:inputType="text"
            android:background="@drawable/input_style"
            android:hint="@string/national_id" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        tools:ignore="ButtonStyle">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/cancel"
            android:background="@color/colorPrimary"
            android:text="@string/cancel"
            android:textColor="@color/colorWhite" />


        <Button
            android:id="@+id/reset_pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/reset_pin"
            android:textColor="@color/colorWhite" />

    </LinearLayout>


</LinearLayout>