<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:text="@string/enter_new_pin"
        android:layout_width="match_parent"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <EditText
            android:layout_marginRight="3dp"
            android:layout_marginEnd="3dp"
            android:background="@drawable/input_style"
            android:maxLines="1"
            android:imeOptions="actionDone"
            android:maxLength="4"
            android:textSize="18sp"
            android:hint="@string/enter_pin"
            android:id="@+id/pin_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        tools:ignore="ButtonStyle">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/cancel"
            android:background="@color/colorPrimary"
            android:text="@string/cancel"
            android:textColor="@color/colorWhite" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/done"
            android:id="@+id/done"
            android:textColor="@color/colorWhite" />

    </LinearLayout>


</LinearLayout>