<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:textSize="25sp"
        android:textColor="@color/colorBlack"
        android:text="@string/update_limit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" />


    <TextView
        android:textSize="21sp"
        android:id="@+id/user_name"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:textSize="18sp"
        android:id="@+id/national_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" />

    <TextView
        android:textSize="18sp"
        android:id="@+id/current_limit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" />


    <EditText
        android:id="@+id/update_limit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:maxLines="1"
        android:maxLength="100"
        android:imeOptions="actionDone"
        android:background="@drawable/input_style"
        android:hint="@string/add_new_limit" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        tools:ignore="ButtonStyle">

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/colorPrimary"
            android:paddingEnd="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingStart="12dp"
            android:text="@string/cancel"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/update"
            android:textColor="@color/colorWhite" />

    </LinearLayout>
</LinearLayout>